# aim-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-VI.md  README.md  SECURITY.md  aim.bat  aim.sh  install.ps1  install.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.bat  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
aim/: MANIFEST.in  README-VI.md  README.md  __init__.py  aim_cli.py  browser_server.py  core.py  dashboard.html  mcp_server.py  semantic.py  setup.py  sync.py  update_check.py
aim/skills/agent-orchestration/: SKILL.md
aim/skills/project-memory/: SKILL.md
aim/skills/taste-skill/: SKILL.md
aim/skills/token-optimizer/: SKILL.md
aim/templates/: config.json.template
aim/templates/aim-agents/: ARCHITECTURE.md  mcp_config.json
aim/templates/commands/: aim-docs.md  aim-extract.md  aim-init.md  aim-task.md  (+6 more)
docs/: ROADMAP.md  agent-integration.md  cli-reference.md  dashboard.md  demo-guide.md  index.md  templates-guide.md
docs/decisions/: 0001-freeze-time-tracking-and-users.md
tests/: conftest.py  test_core.py  test_github.py  test_github_pull.py  test_hardening.py  test_helpers.py  test_ingest.py  test_lint.py  test_mcp_server.py  test_memory_context.py  test_memory_doctor.py  test_renumber_projectstatus.py  test_semantic.py  test_spec.py  test_spec_new.py  test_suite_counts.py  test_sync_targets.py  test_task_deps.py  test_task_roundtrip.py  test_update_check.py
(+173 files in other folders)
